# ChangeLog for sci-electronics/eagle
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sci-electronics/eagle/ChangeLog,v 1.57 2013/08/01 20:52:21 ssuominen Exp $

  01 Aug 2013; Samuli Suominen <ssuominen@gentoo.org> eagle-5.10.0-r1.ebuild,
  eagle-5.11.0.ebuild:
  Fix libjpeg.so.62 dependency.

  16 Jun 2013; Pacho Ramos <pacho@gentoo.org> metadata.xml:
  Cleanup due #79409

  21 Apr 2013; Michał Górny <mgorny@gentoo.org> eagle-6.2.0.ebuild,
  eagle-6.2.1_beta.ebuild:
  Support multilib libraries alternatively to emul-linux-x86-xlibs.

  24 Sep 2012; Mike Frysinger <vapier@gentoo.org> eagle-4.16_p2-r2.ebuild,
  eagle-5.10.0-r1.ebuild, eagle-5.11.0.ebuild, eagle-6.2.0.ebuild,
  eagle-6.2.1_beta.ebuild:
  QA_DT_HASH (old/deprecated) -> QA_FLAGS_IGNORED (new hotness).

*eagle-6.2.1_beta (07 Jul 2012)

  07 Jul 2012; Michael Weber <xmw@gentoo.org> +eagle-6.2.1_beta.ebuild:
  Version bump (libpng14 linked static)

*eagle-6.2.0 (05 Jul 2012)

  05 Jul 2012; Michael Weber <xmw@gentoo.org> +eagle-6.2.0.ebuild:
  Version bump (thanks idl0r, bug 397491), PMASKED until the libpng14 issue gets
  solved.

  08 Aug 2011; Markos Chandras <hwoarang@gentoo.org> eagle-5.11.0.ebuild:
  Stable on amd64 wrt bug #377643

  08 Aug 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org> eagle-5.11.0.ebuild:
  x86 stable wrt bug #377643

  04 Aug 2011; Joe Sapp <nixphoeni@gentoo.org> -eagle-5.6.0.ebuild,
  -eagle-5.9.0.ebuild:
  Removed old versions

  09 Jun 2011; Sébastien Fabbro <bicatali@gentoo.org> metadata.xml:
  Switched sci -> sci-electronics as main herd

  11 Mar 2011; Thomas Kahle <tomka@gentoo.org> eagle-5.10.0-r1.ebuild:
  x86 stable per bug 355863

*eagle-5.11.0 (21 Feb 2011)

  21 Feb 2011; Joe Sapp <nixphoeni@gentoo.org> +eagle-5.11.0.ebuild:
  Version bump: added versions to pretty much everything that gets installed
  (for potential SLOTting later); made the desktop menu entry more descriptive
