@@ -8,6 +8,7 @@ DIST eagle-lin-5.10.0.run 34853096 SHA256 84021cbbe7826e317ca29227c5d460ed0d7cda
 DIST eagle-lin-5.11.0.run 36691433 SHA256 b7202e45fb2cb6c3fc6104a19f7cd3ef03d8776fdd277288feda412586cbc42d
 DIST eagle-lin-6.2.0.run 38882197 SHA256 ff1bd18fea82103d1e948df60aa2e4883e0f7f0fceca0ed84614e2b2f5b7d83a SHA512 f1af32004bb9239784a39f4fa978cb768262ec7f4caa8fb2d57651ac7414d64b70397b24111009ce4635bfc59cb33c664f175ab0f7f65a62b4950b342e612df2 WHIRLPOOL 2fd6cfa40c768a2da92e5080f46a83086cbce3a56ff4ddd2560942d66bbc13229cb6c0ef3fe6d4bcfeb2c80190b335380d6709cbbe7ad0edf4856e4ee9e28a60
 DIST eagle-lin-6.2.1-beta.run 39319815 SHA256 2438f881ebedeaae8a94fc96393d1cc5199e4974edade59a11ef2b69f9802a6c SHA512 9c4594058547c7acd2f79f2b71ee177649fa50179b7db900d9b34021a4f01dfabe639e197b2efed1a41ff36df55288f89c92365449248b4a7032b18f1a87f8b1 WHIRLPOOL 465e3b16d128f0fef85ce3899764714c77a5f3d1b00da566f6a6ae9227c5690823c439b7075272768f487e34cc23e71ce3549afdf9372cca01f2dd02c9de10f7
+DIST eagle-lin-6.5.0.run 41124047 SHA256 42c875e819d40724894372ecc36f194c9eda96cbacc86fc1a45e607445e7f49e SHA512 f7f260d09c504439b2db791031d6f458fcc6f1caee4d5c91ac399ed28d0ebc55d2444e7532b35cc53d61fa389d37bd2bcb404852a47657c5bdf0c08c6952e3b4 WHIRLPOOL 65a6329969c1a0d3aabbb15c0f42d01f71144db4f292ba0ba10b1eb0318bdfd5af2709e0982fcc18fc2536304cad90564e8dac30e67152d1ccd8d77b255a96f6
 DIST eagle-lin-eng-4.16r2.tgz 8922532 SHA256 dc71102780621022c5f3b124bbcde075f23d3e04d624a2985afa733fbae8c7e4
 DIST eagle-lin-ger-4.16r2.tgz 9018957 SHA256 6c570e41668da23e1f473da3bfd879cbeb76bea02d35ae13970db48b3aa36259
 EBUILD eagle-4.16_p2-r2.ebuild 2752 SHA256 280c6f3b021cfe873dd2511942ac75dbce45d64d1b6bc479aa1f3581bb24ce3b SHA512 4a2ea6db7d7b699e5d0978e92d5f3da22d59b83922c37cd4b71be5330f1ede4347dba3c36a0e41c421d74d07da0a282ea1b4a3ec26a59c5d0e31c7982218c0b9 WHIRLPOOL 5be4c4227fc186d9d1310831e67dc2bc609a038475f02df8dec7d89f91b17dc746f29887f9c71c0bd7d0874deb9250a7fbcbe1bc7600b4a1cd9473939af29909
@@ -15,16 +16,17 @@ EBUILD eagle-5.10.0-r1.ebuild 3070 SHA256 1a350c09e4e6211c8baef2070193403bc4da75
 EBUILD eagle-5.11.0.ebuild 3109 SHA256 9bc8d9b2be1d4f9618e16d859b226c92413d1969cc5db3227e2370312ed599d0 SHA512 ef7a7bd274d2977446373d3afe2499bfdfba5f65c9c53c546a85d669babd6c97a6c4a38400be90069c80e2569eb66c2be013f17dc96e89b71096d22d9a83d2ba WHIRLPOOL c6801730090efec64d8ee5739d79db9bad73ceef903b669dbce790001f39180db3343bb256153194707faecb9b1a9dee292748436469deb9ee5bcd2fe821f6aa
 EBUILD eagle-6.2.0.ebuild 3357 SHA256 8827f7ac81838f994f886fdc81bf3523e0390076fbd2cd1c2a3d555c73638f75 SHA512 d87f55791967dc63278bd67d7fd40b61f84178289a97aa0efdfe2ecdc2775ca1c2819a3dcfe3b9cd3d4f04bcc11b274c75dd4dd74ae37d78f4a62d04aa89e372 WHIRLPOOL 3b746ebe8662cdceca09eefcdbe6ac2998e6cd46d82f8731f3a812ba6155d8a6896d2f4f786e0867b2ae567fd44749880e19e5f11c3aa6149b4a41f1b0fffb83
 EBUILD eagle-6.2.1_beta.ebuild 3401 SHA256 f78773a75132051e3881e7a946bfd7f175ef1f8bd2f4ff3eab74249e5f80c631 SHA512 5c8c0055f55f54ce0005b49fee5acd7688fb3c815c916367c97410e215e6c4bf7756e003580b3247c803cd5fcd3d52469aec3b877dc09e1714e50e46b84e09ed WHIRLPOOL ee743405c1c65e6dd94e1bf5a261d2515744e22e843257893261f70f1e76c1e2718c7bea15e1b01bd683ce403813b3690e02dcf8f21a9db7e981dd8a266c70d4
-MISC ChangeLog 9319 SHA256 55bd1cd08b946e64064be0a568af226f8969aa7069a7d7f4ec645da51a2511dc SHA512 3a890a502b6a8d5f7b02f1119ea9e03aedacd3c2b42ebbfd1d69a25acab5c1f5fa66e5bbca06dd36534e33f95db08cf047cf1c5000668201e419c82defe97b53 WHIRLPOOL f47105b7d949eb610694c8da2efd0b49d7a1be6e4d8b3f219d9909f30415aaa57169e9404703d66863d3129061f3dd903d2fdf58a4bbbb09c02444c1206cfd5e
-MISC metadata.xml 571 SHA256 f3799d89292cc5010088e9a8f946d974872a207172b2605d69bffd730f75c253 SHA512 646b2a942c651795575ab0bcd54f78782558a732f0b6777fbdcbd54ce0596d75d97e15259e20a9d05f016aadc07211246c0d6172bd4c1ad9c6366731a0289b07 WHIRLPOOL 8063571d1e10a4eeef214f0f22bbb03031d82a57432253db6a15510c5b0679bb7b5709c7be31e17ec4d210bf86218dd595d660dc0d2f98e6b380b93b852a5452
+EBUILD eagle-6.5.0.ebuild 3362 SHA256 fce8da3bed419af224b6f6f0952a508728a299d14bb8398285d9b8350a3b553b SHA512 2835196519c6e12a056e1229bfc64b7d33d5a35228468a090ee644404f38a4c7cc2357fcde21b7c93476bb9ddc18e181082dcfb5fef527aa20029bf63c8f00b6 WHIRLPOOL f54a089c4f842e6de2bb53767d74f74dcdc5fe856d36aea7ca6a441d07940e53f7543cc9b48884092dfc4d6497227c660086c437f47add87ba4a888afb082424
+MISC ChangeLog 9479 SHA256 90b5b25deb64277536d80ff0a8f7bb15f8b239b75491f6be4dbb1d8a45e13dc6 SHA512 b6e631e64d3fe53f752140ed65559667603997b4b3076f2f32753bf19d9717c39cd73d51b2a92c89317afc7478b6e6d5abfef9a186806841d2e27b6dc9f7860a WHIRLPOOL 694cbe4057ad734476ecff822f090ee026c10fde16a7ed63f1eb75b6a16b6278040637f50f23de65d1f4f3fd79ef0cb50e0912598cdf4d65aa8350ca4c6b9123
+MISC metadata.xml 667 SHA256 e2b23272a937a4e4f89bf9f5af1be0cca6d5decee0041698c0b65f3ab1b9cd1c SHA512 8cae35fa452b5dbc51e4a5f5efd8c7927720b614f6f70579c5778f79f241ef71025af9240f723f11a4694229bb679a8f9b6effbb5516c2f6e593fcd518e44c9a WHIRLPOOL a9c92b8d95068b0f2cd7fe5b10b567ddeabeafaaff22aab26b44579d1ca9f00b43630a966bf9a2426a43c672db8780d32cc0a008655394c8b9b6b63feacc0625
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.20 (GNU/Linux)
+Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQEcBAEBCAAGBQJR+sotAAoJEEdUh39IaPFNew0H/jVVhNX1edlpHEif+Vroz+Ik
-Or3TsG6ioJuIleMhpk37Q3R4NWN3vPEW/4yvt6ZeIRYwtSrIqjHjQWS8w2iUrE0F
-cKJoIe+7ycI0WRIA5YyJm5dhvadtAta31noP03Bn8iS6lA1q5bbcHIe51G6t5KAl
-En2s3zlrqV+0K2rW2ZY6nyACmpzreuLAYZ49ezyJ/ClkRweRHsNL2n6PP8GqaTmo
-e93CcIDzdewf3qegHI7HMv3CovGUevNYC4Hyy4QS7fXrzUMW0qUXuTZFCLqnhRiN
-FGotzr2x5kJX6PWcY9Ar4Hz97P3jd+1umXmhr1PNgNhsFTv1CJRppc6qz19mAXk=
-=A/To
+iQEcBAEBCAAGBQJSs1NYAAoJEMOx0zmdw4Z1TrMIALAy8IGU9BoIAIZPEvK19cQX
+OjOvpg7qmFDMhKsPdlQ4bqNhyz925DRSwXr4sgF/U4kwZvOTHyln91eJDrT/JTL8
+g9ihyI9Eg4C//gqOZeHSoHbnTm88tCjHbS9/15n8Elro776fDzeRNsagAqB/0r5B
+KlvQFLfhcfGmEKC5nptdABZCHPvhD3ZyVTa9b4nOp2ggecRIxPUev5emNXsJ2lr9
+bGS6tgSWopkRYhuALHekngZz7EPvMHLT97/XsGcKIrsHUEVP+oZjckocwshrg+gs
+mPIGfCOZAddG9aPYIzmIpKsiVKjuXj5HVZCN6fBuhdVwzvoaAwdabHtgp/7P/ag=
+=gusg
 -----END PGP SIGNATURE-----
