@@ -1,6 +1,12 @@
 # ChangeLog for sci-electronics/eagle
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-electronics/eagle/ChangeLog,v 1.57 2013/08/01 20:52:21 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-electronics/eagle/ChangeLog,v 1.58 2013/12/19 20:13:07 idl0r Exp $
+
+*eagle-6.5.0 (19 Dec 2013)
+
+  19 Dec 2013; Christian Ruppert <idl0r@gentoo.org> +eagle-6.5.0.ebuild,
+  metadata.xml:
+  Bump, bug 448142. Add myself as maintainer.
 
   01 Aug 2013; Samuli Suominen <ssuominen@gentoo.org> eagle-5.10.0-r1.ebuild,
   eagle-5.11.0.ebuild:
